# slicer_modules_trials

./: CMakeLists.txt  README.md
AnglePoints/: AnglePoints.py  CMakeLists.txt
CalculateDistance/: CMakeLists.txt  CalculateDistance.py
CompareDistances/: CMakeLists.txt  CompareDistances.py
Cortico_cortical_electrode_extension/: CMakeLists.txt
Cortico_cortical_electrode_extension/cortico_cortical_module/: CMakeLists.txt  cortico_cortical_module.py
MIPonPlane/: CMakeLists.txt  MIPonPlane.py  MIPonPlaneOld.py  README.txt  Segmentation.py
SaveFiducialList/: CMakeLists.txt  SaveFiducialList.py
surgeonEyeView/: CMakeLists.txt  README.txt  surgeonEyeView.py
vtkModel/: CMakeLists.txt  vtkModel.py
